--- a/MEU/Api_Reclamao/Dockerfile
+++ b/MEU/Api_Reclamao/Dockerfile
@@ -1,9 +1,12 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0-preview AS build
 WORKDIR /src
 
-COPY . .
+COPY Api_Reclamao/Api_Reclamao.csproj ./Api_Reclamao/
+COPY Reclamao/Reclamao.csproj ./Reclamao/
 
 RUN dotnet restore ./Api_Reclamao/Api_Reclamao.csproj
+
+COPY . .
 
 RUN rm -f ./Reclamao/appsettings.json ./Reclamao/appsettings.Development.json
 
